# greentic-cap

./: Cargo.toml  LICENSE  README.md  coverage-policy.json
.codex/: PR-01-bootstrap-new-repo-workspace-codex-ci-and-release.md  PR-02-add-core-capability-types-schemas-and-validation.md  PR-03-add-profile-expansion-and-resolution-engine.md  PR-04-add-pack-cbor-capability-declarations-and-operation-compatibility.md  PR-05-add-bundle-setup-integration-resolution-output-and-examples.md  global_rules.md  repo_overview.md
.github/actions/rust-setup/: action.yml
.github/workflows/: _reusable_coverage.yml  ci.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dev-publish.yml  nightly-coverage.yml  perf.yml  publish.yml
benches/: perf.rs
ci/: local_check.sh
crates/greentic-cap-core/: Cargo.toml
crates/greentic-cap-profile/: Cargo.toml
crates/greentic-cap-resolver/: Cargo.toml
crates/greentic-cap-schema/: Cargo.toml
crates/greentic-cap-schema/src/: lib.rs
crates/greentic-cap-types/: Cargo.toml
docs/: capability_outputs.md
tests/: perf_scaling.rs  perf_timeout.rs
tests/perf_support/: mod.rs
