bench = [
    { name = "perf", harness = false },
]

[workspace]
members = [
    "crates/greentic-cap-types",
    "crates/greentic-cap-schema",
    "crates/greentic-cap-core",
    "crates/greentic-cap-profile",
    "crates/greentic-cap-resolver",
]
resolver = "2"

[workspace.package]
version = "0.6.0-dev.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/greenticai/greentic-cap"
readme = "README.md"
description = "Greentic capability workspace scaffold."
homepage = "https://github.com/greenticai/greentic-cap"
keywords = [
    "greentic",
    "capability",
    "workspace",
]
categories = [
    "development-tools",
]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/src/**",
    "/docs/**",
    "/examples/**",
]

[workspace.dependencies]
serde_json = "1"
serde_cbor = "0.11"
thiserror = "2"

[workspace.dependencies.criterion]
version = "0.5"
default-features = true

[workspace.dependencies.schemars]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[package]
name = "greentic-cap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
[dependencies]

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.greentic-cap-core]
version = ">=0.6.0-dev, <0.7.0-0"
path = "crates/greentic-cap-core"

[dev-dependencies.greentic-cap-resolver]
version = ">=0.6.0-dev, <0.7.0-0"
path = "crates/greentic-cap-resolver"

[dev-dependencies.greentic-cap-schema]
version = ">=0.6.0-dev, <0.7.0-0"
path = "crates/greentic-cap-schema"

[dev-dependencies.greentic-cap-types]
version = ">=0.6.0-dev, <0.7.0-0"
path = "crates/greentic-cap-types"

[dev-dependencies.serde_json]
workspace = true
