[package]
name = "greentic-cap-profile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Profile expansion helpers for Greentic capability declarations."

[dependencies]
greentic-cap-types = { version = "0.5", path = "../greentic-cap-types" }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["serde", "schemars"]
serde = []
schemars = []
