[package]
name = "greentic-cap-resolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic Greentic capability resolution helpers."

[dependencies]
greentic-cap-profile = { version = "0.5", path = "../greentic-cap-profile" }
greentic-cap-types = { version = "0.5", path = "../greentic-cap-types" }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["serde", "schemars"]
serde = []
schemars = []
