[package]
name = "greentic-cap-resolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic Greentic capability resolution helpers."

[dependencies.greentic-cap-profile]
version = ">=0.6.0-dev, <0.7.0-0"
path = "../greentic-cap-profile"

[dependencies.greentic-cap-types]
version = ">=0.6.0-dev, <0.7.0-0"
path = "../greentic-cap-types"

[dependencies.schemars]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.thiserror]
workspace = true

[features]
default = [
    "serde",
    "schemars",
]
serde = []
schemars = []
