[package]
name = "greentic-cap-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Schemas and validation helpers for Greentic capability declarations."

[dependencies]
greentic-cap-types = { version = "0.5", path = "../greentic-cap-types" }
greentic-cap-resolver = { version = "0.5", path = "../greentic-cap-resolver" }
schemars = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["serde", "schemars"]
serde = []
schemars = []
